force-app/main/default/objects/TWIST_Form_Registration_Settings__mdt/TWIST_Form_Registration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom meta data in order to get the dedicated field for each country on the registration form</description>
    <label>TWIST Form Registration Setting</label>
    <pluralLabel>TWIST Form Registration Settings</pluralLabel>
</CustomObject>