force-app/main/default/objects/TWIST_Form_Registration_Settings__mdt/fields/Country_Language__c.field-meta.xml
<CustomField>
    <fullName>Country_Language__c</fullName>
    <description>List of all the exsting Local of lv com/app</description>
    <label>Country Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ara-ae</fullName>
                <default>true</default>
                <label>ara-ae</label>
            </value>
            <value>
                <fullName>deu-de</fullName>
            </value>
            <value>
                <fullName>eng-ae</fullName>
            </value>
            <value>
                <fullName>eng-au</fullName>
            </value>
            <value>
                <fullName>eng-ca</fullName>
            </value>
            <value>
                <fullName>eng-e1</fullName>
            </value>
            <value>
                <fullName>eng-gb</fullName>
            </value>
            <value>
                <fullName>eng-hk</fullName>
            </value>
            <value>
                <fullName>eng-nl</fullName>
            </value>
            <value>
                <fullName>eng-sg</fullName>
            </value>
            <value>
                <fullName>eng-us</fullName>
            </value>
            <value>
                <fullName>esp-es</fullName>
            </value>
            <value>
                <fullName>esp-mx</fullName>
            </value>
            <value>
                <fullName>fra-ca</fullName>
            </value>
            <value>
                <fullName>fra-fr</fullName>
            </value>
            <value>
                <fullName>ita-it</fullName>
            </value>
            <value>
                <fullName>jpn-jp</fullName>
            </value>
            <value>
                <fullName>kor-kr</fullName>
            </value>
            <value>
                <fullName>por-br</fullName>
            </value>
            <value>
                <fullName>rus-ru</fullName>
            </value>
            <value>
                <fullName>tha-th</fullName>
            </value>
            <value>
                <fullName>vnm-vn</fullName>
            </value>
            <value>
                <fullName>zhs-cn</fullName>
            </value>
            <value>
                <fullName>zht-hk</fullName>
            </value>
            <value>
                <fullName>zht-tw</fullName>
            </value>
            <value>
                <fullName>eng-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>