force-app/main/default/objects/TWIST_Form_Registration_Settings__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>8</length>
    <type>Text</type>
</CustomField>