force-app/main/default/objects/TWIST_Form_Registration_Settings__mdt/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>TextArea</type>
</CustomField>