force-app/main/default/objects/TWIST_Form_Registration_Settings__mdt/fields/Validation_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Validation_Max_Length__c</fullName>
    <label>Validation Max Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>